--- a/requirements.txt
+++ b/requirements.txt
@@ -16,18 +16,18 @@ boto3==1.26.117
 botocore==1.29.117
 bpemb==0.3.4
 brotlipy==0.7.0
-certifi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5d968ni_yn/croot/certifi_1671487774636/work/certifi
-cffi @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_ab19r4bji3/croot/cffi_1670423206034/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+certifi
+cffi
+charset-normalizer
 cloudpickle==2.2.1
 comm==0.1.3
 conda==23.1.0
-conda-content-trust @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_11146a2b-93c2-444c-a378-ad4fac363e991s0r1hnp/croots/recipe/conda-content-trust_1658126383571/work
-conda-package-handling @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_5f3f459f9v/croot/conda-package-handling_1672865025324/work
-conda_package_streaming @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_58gpsa_6af/croot/conda-package-streaming_1670508144037/work
+conda-content-trust
+conda-package-handling
+conda_package_streaming
 conllu==4.5.2
 contourpy==1.0.7
-cryptography @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8c_qoky_1b/croot/cryptography_1673298759921/work
+cryptography
 cycler==0.11.0
 datasets==2.11.0
 debugpy==1.6.7
@@ -49,7 +49,7 @@ gdown==4.4.0
 gensim==4.3.1
 huggingface-hub==0.13.4
 hyperopt==0.2.7
-idna @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_771olrhiqw/croot/idna_1666125579282/work
+idna
 ipykernel==6.22.0
 ipython==8.12.0
 ipython-genutils==0.2.0
@@ -102,7 +102,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
 platformdirs==3.2.0
-pluggy @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_croot-w6jyveby/pluggy_1648109277227/work
+pluggy
 pptree==3.1
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
@@ -112,15 +112,15 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 py4j==0.10.9.7
 pyarrow==11.0.0
-pycosat @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_e9xhel3kyj/croot/pycosat_1666805516297/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+pycosat
+pycparser
 Pygments==2.15.1
 pyinstaller==5.10.1
 pyinstaller-hooks-contrib==2023.2
-pyOpenSSL @ file:///opt/conda/conda-bld/pyopenssl_1643788558760/work
+pyOpenSSL
 pyparsing==3.0.9
 pyrsistent==0.19.3
-PySocks @ file:///Users/ktietz/ci_310/pysocks_1643961536721/work
+PySocks
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytorch_revgrad==0.2.0
@@ -130,19 +130,19 @@ pyzmq==25.0.2
 qtconsole==5.4.2
 QtPy==2.3.1
 regex==2023.3.23
-requests @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_b15e28ca-768e-4951-b4c6-8a7476e43183hrjpnkg9/croots/recipe/requests_1657734638595/work
+requests
 responses==0.18.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
-ruamel.yaml @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_aeh5mqcw49/croot/ruamel.yaml_1666304555976/work
-ruamel.yaml.clib @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_f64xdg2rww/croot/ruamel.yaml.clib_1666302244208/work
+ruamel.yaml
+ruamel.yaml.clib
 s3transfer==0.6.0
 scikit-learn==1.2.2
 scipy==1.10.1
 segtok==1.5.11
 Send2Trash==1.8.0
 sentencepiece==0.1.98
-six @ file:///tmp/build/80754af9/six_1644875935023/work
+six
 smart-open==6.3.0
 sniffio==1.3.0
 soupsieve==2.4.1
@@ -154,17 +154,17 @@ terminado==0.17.1
 threadpoolctl==3.1.0
 tinycss2==1.2.1
 tokenizers==0.13.3
-toolz @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_362wyqvvgy/croot/toolz_1667464079070/work
+toolz
 torch==2.0.0
 tornado==6.3
-tqdm @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_637jfu39ar/croots/recipe/tqdm_1664392693982/work
+tqdm
 traitlets==5.9.0
 transformer-smaller-training-vocab==0.2.3
 transformers==4.28.1
 typing_extensions==4.5.0
 tzdata==2023.3
 uri-template==1.2.0
-urllib3 @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_8fvc4z_gis/croot/urllib3_1673575619550/work
+urllib3
 wcwidth==0.2.6
 webcolors==1.13
 webencodings==0.5.1
@@ -174,4 +174,4 @@ Wikipedia-API==0.5.8
 wrapt==1.15.0
 xxhash==3.2.0
 yarl==1.8.2
-zstandard @ file:///private/var/folders/nz/j6p8yfhx1mv_0grj5xl4650h0000gp/T/abs_99wz2rcox4/croots/recipe/zstandard_1663827384884/work
+zstandard
