--- a/requirements.txt
+++ b/requirements.txt
@@ -1,177 +1,177 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-altgraph==0.17.3
-anyio==3.6.2
-appnope==0.1.3
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-beautifulsoup4==4.12.2
-bleach==6.0.0
-boto3==1.26.117
-botocore==1.29.117
-bpemb==0.3.4
-brotlipy==0.7.0
+aiohttp
+aiosignal
+altgraph
+anyio
+appnope
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asttokens
+async-timeout
+attrs
+backcall
+beautifulsoup4
+bleach
+boto3
+botocore
+bpemb
+brotlipy
 certifi
 cffi
 charset-normalizer
-cloudpickle==2.2.1
-comm==0.1.3
-conda==23.1.0
+cloudpickle
+comm
+conda
 conda-content-trust
 conda-package-handling
 conda_package_streaming
-conllu==4.5.2
-contourpy==1.0.7
+conllu
+contourpy
 cryptography
-cycler==0.11.0
-datasets==2.11.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-Deprecated==1.2.13
-dill==0.3.6
-executing==1.2.0
-fastjsonschema==2.16.3
-filelock==3.12.0
-flair==0.12.2
-fonttools==4.39.3
-fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2023.4.0
-ftfy==6.1.1
-future==0.18.3
-gdown==4.4.0
-gensim==4.3.1
-huggingface-hub==0.13.4
-hyperopt==0.2.7
+cycler
+datasets
+debugpy
+decorator
+defusedxml
+Deprecated
+dill
+executing
+fastjsonschema
+filelock
+flair
+fonttools
+fqdn
+frozenlist
+fsspec
+ftfy
+future
+gdown
+gensim
+huggingface-hub
+hyperopt
 idna
-ipykernel==6.22.0
-ipython==8.12.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-isoduration==20.11.0
-Janome==0.4.2
-jedi==0.18.2
-Jinja2==3.1.2
-jmespath==1.0.1
-joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.7
-kiwisolver==1.4.4
-langdetect==1.0.9
-lxml==4.9.2
-macholib==1.16.2
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mistune==2.0.5
-more-itertools==9.1.0
-mpld3==0.3
-mpmath==1.3.0
-multidict==6.0.4
-multiprocess==0.70.14
-nbclassic==0.5.5
-nbclient==0.7.3
-nbconvert==7.3.1
-nbformat==5.8.0
-nest-asyncio==1.5.6
-networkx==3.1
-notebook==6.5.4
-notebook_shim==0.2.2
-numpy==1.24.2
-openai==0.27.4
-packaging==23.1
-pandas==2.0.0
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.2.0
+ipykernel
+ipython
+ipython-genutils
+ipywidgets
+isoduration
+Janome
+jedi
+Jinja2
+jmespath
+joblib
+jsonpointer
+jsonschema
+jupyter
+jupyter-console
+jupyter-events
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab-pygments
+jupyterlab-widgets
+kiwisolver
+langdetect
+lxml
+macholib
+MarkupSafe
+matplotlib
+matplotlib-inline
+mistune
+more-itertools
+mpld3
+mpmath
+multidict
+multiprocess
+nbclassic
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+networkx
+notebook
+notebook_shim
+numpy
+openai
+packaging
+pandas
+pandocfilters
+parso
+pexpect
+pickleshare
+Pillow
+platformdirs
 pluggy
-pptree==3.1
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-protobuf==3.20.2
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-py4j==0.10.9.7
-pyarrow==11.0.0
+pptree
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+ptyprocess
+pure-eval
+py4j
+pyarrow
 pycosat
 pycparser
-Pygments==2.15.1
-pyinstaller==5.10.1
-pyinstaller-hooks-contrib==2023.2
+Pygments
+pyinstaller
+pyinstaller-hooks-contrib
 pyOpenSSL
-pyparsing==3.0.9
-pyrsistent==0.19.3
+pyparsing
+pyrsistent
 PySocks
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytorch_revgrad==0.2.0
-pytz==2023.3
-PyYAML==6.0
-pyzmq==25.0.2
-qtconsole==5.4.2
-QtPy==2.3.1
-regex==2023.3.23
+python-dateutil
+python-json-logger
+pytorch_revgrad
+pytz
+PyYAML
+pyzmq
+qtconsole
+QtPy
+regex
 requests
-responses==0.18.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
+responses
+rfc3339-validator
+rfc3986-validator
 ruamel.yaml
 ruamel.yaml.clib
-s3transfer==0.6.0
-scikit-learn==1.2.2
-scipy==1.10.1
-segtok==1.5.11
-Send2Trash==1.8.0
-sentencepiece==0.1.98
+s3transfer
+scikit-learn
+scipy
+segtok
+Send2Trash
+sentencepiece
 six
-smart-open==6.3.0
-sniffio==1.3.0
-soupsieve==2.4.1
-sqlitedict==2.1.0
-stack-data==0.6.2
-sympy==1.11.1
-tabulate==0.9.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-tokenizers==0.13.3
+smart-open
+sniffio
+soupsieve
+sqlitedict
+stack-data
+sympy
+tabulate
+terminado
+threadpoolctl
+tinycss2
+tokenizers
 toolz
-torch==2.0.0
-tornado==6.3
+torch
+tornado
 tqdm
-traitlets==5.9.0
-transformer-smaller-training-vocab==0.2.3
-transformers==4.28.1
-typing_extensions==4.5.0
-tzdata==2023.3
-uri-template==1.2.0
+traitlets
+transformer-smaller-training-vocab
+transformers
+typing_extensions
+tzdata
+uri-template
 urllib3
-wcwidth==0.2.6
-webcolors==1.13
-webencodings==0.5.1
-websocket-client==1.5.1
-widgetsnbextension==4.0.7
-Wikipedia-API==0.5.8
-wrapt==1.15.0
-xxhash==3.2.0
-yarl==1.8.2
+wcwidth
+webcolors
+webencodings
+websocket-client
+widgetsnbextension
+Wikipedia-API
+wrapt
+xxhash
+yarl
 zstandard
