--- a/requirements.txt
+++ b/requirements.txt
@@ -1,173 +1,1 @@
-aiohttp
-aiosignal
-altgraph
-anyio
-appnope
-argon2-cffi
-argon2-cffi-bindings
-arrow
-asttokens
-async-timeout
-attrs
-backcall
-beautifulsoup4
-bleach
-boto3
-botocore
-bpemb
-brotlipy
-certifi
-cffi
-charset-normalizer
-cloudpickle
-comm
-conllu
-contourpy
-cryptography
-cycler
-datasets
-debugpy
-decorator
-defusedxml
-Deprecated
-dill
-executing
-fastjsonschema
-filelock
-flair
-fonttools
-fqdn
-frozenlist
-fsspec
-ftfy
-future
-gdown
-gensim
-huggingface-hub
-hyperopt
-idna
-ipykernel
-ipython
-ipython-genutils
-ipywidgets
-isoduration
-Janome
-jedi
-Jinja2
-jmespath
-joblib
-jsonpointer
-jsonschema
-jupyter
-jupyter-console
-jupyter-events
-jupyter_client
-jupyter_core
-jupyter_server
-jupyter_server_terminals
-jupyterlab-pygments
-jupyterlab-widgets
-kiwisolver
-langdetect
-lxml
-macholib
-MarkupSafe
-matplotlib
-matplotlib-inline
-mistune
-more-itertools
-mpld3
-mpmath
-multidict
-multiprocess
-nbclassic
-nbclient
-nbconvert
-nbformat
-nest-asyncio
-networkx
-notebook
-notebook_shim
-numpy
-openai
-packaging
-pandas
-pandocfilters
-parso
-pexpect
-pickleshare
-Pillow
-platformdirs
-pluggy
-pptree
-prometheus-client
-prompt-toolkit
-protobuf
-psutil
-ptyprocess
-pure-eval
-py4j
-pyarrow
-pycosat
-pycparser
-Pygments
-pyinstaller
-pyinstaller-hooks-contrib
-pyOpenSSL
-pyparsing
-pyrsistent
-PySocks
-python-dateutil
-python-json-logger
-pytorch_revgrad
-pytz
-PyYAML
-pyzmq
-qtconsole
-QtPy
-regex
-requests
-responses
-rfc3339-validator
-rfc3986-validator
-ruamel.yaml
-ruamel.yaml.clib
-s3transfer
-scikit-learn
-scipy
-segtok
-Send2Trash
-sentencepiece
-six
-smart-open
-sniffio
-soupsieve
-sqlitedict
-stack-data
-sympy
-tabulate
-terminado
-threadpoolctl
-tinycss2
-tokenizers
-toolz
-torch
-tornado
-tqdm
-traitlets
-transformer-smaller-training-vocab
-transformers
-typing_extensions
-tzdata
-uri-template
-urllib3
-wcwidth
-webcolors
-webencodings
-websocket-client
-widgetsnbextension
-Wikipedia-API
-wrapt
-xxhash
-yarl
-zstandard
+flask
